add concurrency for multi-valued features management (only `allValuesOf`) + optimize I/O